Mon Apr  9 07:50:08 2001  Chad Elliott  <elliott_c@ociweb.com>

        * examples/IPC_SAP/SOCK_SAP/CPP-memclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/Makefile:
          Fixed a typo in the Makefile and added "Options.h" include to
          CPP-memclient.cpp.

Mon Apr  9 07:42:29 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Basic_Types.cpp:
          Changed format flags from ios::fmtflags to unsigned long.
          This typedef is not supported by all platforms.  Thanks Carlos
          <coryan@uci.edu> for suggesting this change.

Mon Apr 09 08:08:11 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Timer_Queue_T.h
          Declared private copy constructor and assignment operator
          for class ACE_Event_Handler_Handle_Timeout_Upcall

Sun Apr 08 18:55:58 2001  Carlos O'Ryan  <coryan@uci.edu>

        * tests/DLL_Test.cpp:
          Use ACE::ldname() instead of keeping a local function to
          decorate the name.
          Use the "d" suffix only on MSVC debug builds.

        * tests/Makefile.bor:
        * tests/DLL_Test.bor:
          New Borland Makefile for the shared library in DLL_Test.  Thanks
          to Christopher Kohlhoff  <chris@kohlhoff.com> for providing the
          patches.

        * tests/run_test.pl:
          Add ExeSubDir to the path, required in Borland builds to find
          the shared libraries created locally.

Sun Apr  8 13:12:54 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/SString.cpp: Reordered various constructor initializers so
          G++ doesn't complain.  Thanks to Bala for reporting this.

        * ace/SString.{h,i,cpp}: Added various optimizations to ACE_WString
          so it will perform certain operations as efficiently as
          ACE_CString.  Thanks to Eric Zuur <Eric.Zuur@meco.nl> for
          contributing these enhancements.

Sun Apr 08 12:10:30 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

        * examples/IPC_SAP/SOCK_SAP/CPP-memclient.cpp: